personal library and addBook function.